# AIClothesShop

./: .dockerignore  .env.example  .gitignore  .pre-coomit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django-ci.yml
base_templates/template/: index-full.html
locale/en/LC_MESSAGES/: django.po
locale/uk/LC_MESSAGES/: django.po
server/: celery.py  urls.py
server/apps/catalog/: admin.py  apps.py  choices.py  filters.py  models.py  urls.py
server/apps/catalog/admin/: category.py  item.py
server/apps/catalog/logic/: catalog_index.py  category_items.py  configurator.py  item_detail.py  openai_api.py
server/apps/catalog/migrations/: 0001_initial.py  0002_item_itemimage.py  0003_remove_category_icon_alter_category_name.py  0004_categoryimage.py  0005_rename_price_finish_item_price_and_more.py  0006_item_color.py  0007_item_fit_item_size.py  0008_itemimage_created_at_itemimage_updated_at.py  0009_itemeditableimage.py
server/apps/catalog/models/: __init__.py  category.py  item.py
server/apps/catalog/services/: print_generator.py  session_gallery.py  user_gallery_manager.py
server/apps/catalog/templates/catalog/: catalog_index.html  catalog_items.html  item_configurator.html  item_detail.html
server/apps/core/: admin.py  utils.py
server/apps/cover/: apps.py
server/apps/cover/logic/: index.py
server/apps/cover/templates/cover/: index.html
server/apps/manager/: apps.py
server/apps/manager/management/commands/: init_db.py
server/apps/manager/services/: db_init.py
server/apps/manager/services/initializers/: base.py  catalog.py
server/apps/user/: admin.py  constants.py  urls.py
server/apps/user/logic/: gallery.py  profile.py
server/apps/user/migrations/: 0001_initial.py
server/apps/user/models/: __init__.py  gallary.py  gallery.py  profile.py
server/apps/user/templates/user/: profile.html
server/apps/user/templates/user/partials/: auth_user_gallery.html  gallery.html  overview.html  session_gallery.html
server/settings/: __init__.py
server/settings/components/: authentication.py  celery.py  common.py  s3_bucket.py
server/templates/account/: base.html  login.html  signup.html
server/templates/base/: base.html  footer.html  header.html
