[project]
name = "aiclothesstore"
version = "0.1.0"
description = ""
authors = [
    {name = "AleksandrZhukovin",email = "sashokzuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
package-mode = false
dependencies = [
    "django (>=5.2,<6.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-colorfield (>=0.14.0,<0.15.0)",
    "django-htmx (>=1.23.0,<2.0.0)",
    "django-render-block (>=0.11,<0.12)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "django-cleanup (>=9.0.0,<10.0.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "boto3 (>=1.40.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
